@@ -24,6 +24,7 @@ from pyrdp.mitm.ClipboardMITM import ActiveClipboardStealer
 from pyrdp.mitm.config import MITMConfig
 from pyrdp.mitm.DeviceRedirectionMITM import DeviceRedirectionMITM
 from pyrdp.mitm.FastPathMITM import FastPathMITM
+from pyrdp.mitm.FileCrawlerMITM import FileCrawlerMITM
 from pyrdp.mitm.layerset import RDPLayerSet
 from pyrdp.mitm.MCSMITM import MCSMITM
 from pyrdp.mitm.MITMRecorder import MITMRecorder
@@ -42,25 +43,25 @@ class RDPMITM:
     Main MITM class. The job of this class is to orchestrate the components for all the protocols.
     """
 
-    def __init__(self, log: SessionLogger, config: MITMConfig):
+    def __init__(self, mainLogger: SessionLogger, crawlerLogger: SessionLogger, config: MITMConfig):
         """
         :param log: base logger to use for the connection
         :param config: the MITM configuration
         """
 
-        self.log = log
+        self.log = mainLogger
         """Base logger for the connection"""
 
-        self.clientLog = log.createChild("client")
+        self.clientLog = mainLogger.createChild("client")
         """Base logger for the client side"""
 
-        self.serverLog = log.createChild("server")
+        self.serverLog = mainLogger.createChild("server")
         """Base logger for the server side"""
 
-        self.attackerLog = log.createChild("attacker")
+        self.attackerLog = mainLogger.createChild("attacker")
         """Base logger for the attacker side"""
 
-        self.rc4Log = log.createChild("rc4")
+        self.rc4Log = mainLogger.createChild("rc4")
         """Logger for RC4 secrets"""
 
         self.config = config
@@ -108,6 +109,8 @@ class RDPMITM:
 
         self.attacker: AttackerMITM = None
 
+        self.crawler: FileCrawlerMITM = None
+
         self.client.x224.addObserver(X224Logger(self.getClientLog("x224")))
         self.client.mcs.addObserver(MCSLogger(self.getClientLog("mcs")))
         self.client.slowPath.addObserver(SlowPathLogger(self.getClientLog("slowpath")))
@@ -130,6 +133,9 @@ class RDPMITM:
             date = datetime.datetime.now()
             replayFileName = "rdp_replay_{}_{}.pyrdp".format(date.strftime('%Y%m%d_%H-%M-%S'), date.microsecond // 1000)
             self.recorder.addTransport(FileLayer(self.config.replayDir / replayFileName))
+
+        if config.enableCrawler:
+            self.crawler: FileCrawlerMITM = FileCrawlerMITM(self.getClientLog(MCSChannelName.DEVICE_REDIRECTION).createChild("crawler"), crawlerLogger, self.config, self.state)
 
     def getProtocol(self) -> Protocol:
         """
@@ -298,6 +304,9 @@ class RDPMITM:
 
         deviceRedirection = DeviceRedirectionMITM(clientLayer, serverLayer, self.getLog(MCSChannelName.DEVICE_REDIRECTION), self.config, self.statCounter, self.state)
         self.channelMITMs[client.channelID] = deviceRedirection
+
+        if self.config.enableCrawler:
+            self.crawler.setDeviceRedirectionComponent(deviceRedirection)
 
         if self.attacker:
             self.attacker.setDeviceRedirectionComponent(deviceRedirection)
