@@ -19,6 +19,7 @@ setup(name='pyrdp',
     author_email='egg997@gmail.com, flabelle@gosecure.ca',
     url='https://github.com/GoSecure/pyrdp',
     packages=setuptools.find_packages(include=["pyrdp", "pyrdp.*"]),
+    package_data={"pyrdp": ["mitm/crawler_config/*.txt"]},
     ext_modules=[Extension('rle', ['ext/rle.c'])],
     scripts=[
         'bin/pyrdp-clonecert.py',
